--- a/syslog-ng.conf
+++ b/syslog-ng.conf
@@ -75,9 +75,15 @@ destination d_console_all { file(`tty10`); };
 #
 destination d_xconsole { pipe("/dev/xconsole"); };
 
-# Send the messages to an other host
+# Send the messages to another host
 #
-#destination d_net { tcp("127.0.0.1" port(1000) log_fifo_size(1000)); };
+destination d_net {
+   syslog("syslog"
+     transport("tcp")
+     port(601)
+     log_fifo_size(1000)
+   );
+};
 
 # Debian only
 destination d_ppp { file("/var/log/ppp.log"); };
@@ -154,7 +160,7 @@ log { source(s_src); filter(f_crit); destination(d_console); };
 
 # All messages send to a remote site
 #
-#log { source(s_src); destination(d_net); };
+log { source(s_src); destination(d_net); };
 
 ###
 # Include all config files in /etc/syslog-ng/conf.d/
