use environment variables for remote syslog host and ports

--- a/syslog-ng.conf
+++ b/syslog-ng.conf
@@ -78,9 +78,9 @@ destination d_xconsole { pipe("/dev/xconsole"); };
 # Send the messages to another host
 #
 destination d_net {
-   syslog("syslog"
+   syslog("`SYSLOG_HOST`"
      transport("tcp")
-     port(601)
+     port(`SYSLOG_PORT`)
      log_fifo_size(1000)
    );
 };
